fixing bugs with customize dialog on firefox

--- a/src/client/css/puzzles/xyflyer.less
+++ b/src/client/css/puzzles/xyflyer.less
@@ -608,6 +608,8 @@
         z-index: 98;
         cursor: move;
         text-align: center;
+        .no_select();
+        
         h3, p {
             margin: 0;
         }
@@ -622,6 +624,7 @@
             vertical-align: -2px;
             font-size: @h4size;
             text-align: center;
+            width: 150px;
         }
     }
        
